<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/surface_dark">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvDialogTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_product"
            android:textAppearance="@style/TextAppearance.OujdaShop.Title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilProductName"
            style="@style/Widget.OujdaShop.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/product_name"
            app:boxBackgroundColor="@color/card_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDialogTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etProductName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/primary_text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilProductPrice"
            style="@style/Widget.OujdaShop.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_price"
            app:boxBackgroundColor="@color/card_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilProductName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etProductPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textColor="@color/primary_text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilProductDescription"
            style="@style/Widget.OujdaShop.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_description"
            app:boxBackgroundColor="@color/card_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilProductPrice">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etProductDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:lines="4"
                android:textColor="@color/primary_text" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvImageLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/product_image"
            android:textAppearance="@style/TextAppearance.OujdaShop.Subtitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilProductDescription" />

        <ImageView
            android:id="@+id/ivProductImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="8dp"
            android:background="@color/card_dark"
            android:contentDescription="@string/product_image"
            android:padding="8dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvImageLabel"
            app:srcCompat="@drawable/logo" />

        <Button
            android:id="@+id/btnSelectImage"
            style="@style/Widget.OujdaShop.Button.Secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="Select Image"
            app:layout_constraintBottom_toBottomOf="@+id/ivProductImage"
            app:layout_constraintStart_toEndOf="@+id/ivProductImage"
            app:layout_constraintTop_toTopOf="@+id/ivProductImage" />

        <Button
            android:id="@+id/btnSave"
            style="@style/Widget.OujdaShop.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:text="@string/save"
            app:layout_constraintEnd_toStartOf="@+id/btnCancel"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivProductImage" />

        <Button
            android:id="@+id/btnCancel"
            style="@style/Widget.OujdaShop.Button.Secondary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnSave"
            app:layout_constraintTop_toTopOf="@+id/btnSave" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView> 